컴포넌트 작업중

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev-stage": "vite --mode stage",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore,.eslintignore,.prettierignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@vueuse/head": "^1.0.26",
