--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.58.1",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-svg-loader": "^4.0.0"
   }
 }
