--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pub_prj",
+  "name": "unc-front",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,8 +12,11 @@
   "dependencies": {
     "@vueuse/head": "^1.0.26",
     "axios": "^1.3.3",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "moment": "^2.29.4",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
