--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2",
+    "vue3-i18n": "^1.1.5",
     "vue-router": "^4.1.6",
     "vue-skeletor": "^1.0.6",
     "vuejs3-logger": "^1.0.0"
