--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev-stage": "vite --mode stage",
     "build": "vite build",
     "preview": "vite preview --host",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile"
   },
   "dependencies": {
     "@vueuse/head": "^1.0.26",
