--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.8.4",
     "@vueuse/head": "^1.0.26",
     "axios": "^1.3.3",
     "lodash": "^4.17.21",
@@ -18,6 +19,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "vee-validate": "^4.8.4",
     "vue": "^3.2.45",
     "vue3-i18n": "^1.1.5",
     "vue-router": "^4.1.6",
