--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile"
   },
   "dependencies": {
+    "@duetds/date-picker": "^1.4.0",
     "@vee-validate/rules": "^4.8.4",
+    "@vueform/slider": "^2.1.7",
     "@vueuse/head": "^1.0.26",
     "axios": "^1.3.3",
     "lodash": "^4.17.21",
@@ -21,11 +23,9 @@
     "pinia-plugin-persistedstate": "^3.1.0",
     "vee-validate": "^4.8.4",
     "vue": "^3.2.45",
-    "vue-flatpickr-component": "^11.0.3",
     "vue-router": "^4.1.6",
     "vue-skeletor": "^1.0.6",
     "vue3-i18n": "^1.1.5",
-    "vue3-slider": "^1.8.0",
     "vuejs3-logger": "^1.0.0"
   },
   "devDependencies": {
