--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout source code.
         uses: actions/checkout@master
 
+      - name: Clean
+        run: npm cache verify
+
       - name: Install
         run: npm install
 
