--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.1.0",
+    "swiper": "^9.3.2",
     "vee-validate": "^4.8.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
