손님용 > 내대출 > 진행상태조회
- 온라인약정(상품설명서)
   > 상품설명서 약관동의_일반신용대출설명서
   > 상품설명서 약관동의_일반할부금융설명서
   > 상품설명서 약관동의_일반대출설명서 (작업중 )
- 온라인약정(중도금 대출)
   > 상품설명서 약관동의_중도금대출설명서(가계용)
   > 상품설명서 약관동의_중도금대출설명서(기업용)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.indentSize": "tabSize",
-  "editor.renderWhitespace": "all"
+  "editor.renderWhitespace": "all",
+  "liveServer.settings.port": 5501
 }
