디자인 검수사항 반영 및 scss 소스정리,수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,5 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.indentSize": "tabSize",
-  "editor.renderWhitespace": "all",
-  "liveServer.settings.port": 5501
+  "editor.renderWhitespace": "all"
 }
