--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vee-validate/rules": "^4.8.4",
     "@vueuse/head": "^1.0.26",
     "axios": "^1.3.3",
+    "chart.js": "^4.3.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
@@ -23,6 +24,7 @@
     "swiper": "^9.3.2",
     "vee-validate": "^4.8.4",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6",
     "vue-skeletor": "^1.0.6",
     "vue3-i18n": "^1.1.5",
