--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.3",
     "chart.js": "^4.3.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.4.3",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
     "pinia": "^2.0.28",
