package.json 수정

--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "sass": "^1.58.1",
     "vite": "^4.0.0",
     "vite-svg-loader": "^4.0.0"
+  },
+  "engines": {
+    "node": "18.14.2",
+    "npm": "9.5.0"
   }
 }
