--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview --host",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile/"
+    "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile/",
+    "publish-dev-build": "vite build --base=/pub/hanacapital-dt-rebuild//mobile-dev/"
   },
   "dependencies": {
     "@duetds/date-picker": "^1.4.0",
