--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --open --host",
     "dev-stage": "vite --mode stage",
-    "build": "node --max-old-space-size=1536 node_modules/@vue/cli-service/bin/vue-cli-service.js build --open",
+    "build": "NODE_OPTIONS=--max_old_space_size=4096 node_modules/@vue/cli-service/bin/vue-cli-service.js build --open",
     "preview": "vite preview --host",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile/"
@@ -13,11 +13,9 @@
   "dependencies": {
     "@duetds/date-picker": "^1.4.0",
     "@vee-validate/rules": "^4.8.4",
-    "@vue/cli-service": "^5.0.8",
     "@vueuse/head": "^1.0.26",
     "axios": "^1.3.3",
     "chart.js": "^4.3.0",
-    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
     "luxon": "^3.4.3",
     "mitt": "^3.0.0",
