--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite --open --host",
     "dev-stage": "vite --mode stage",
-    "build": "NODE_OPTIONS=--max_old_space_size=4096 node_modules/@vue/cli-service/bin/vue-cli-service.js build --open",
+    "build": "node --max-old-space-size=12288 node_modules/@vue/cli-service/bin/vue-cli-service.js build --open",
     "preview": "vite preview --host",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile/"
