네트리파이 배포설정

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "vite --open --host",
     "dev-stage": "vite --mode stage",
     "build": "vite build",
+    "build:github": "vite build --base=/project._hanacapital_MO/",
+    "build:netlify": "vite build --base=/",
     "preview": "vite preview --host",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile/"
+    "publish-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile/",
+    "publish-dev-build": "vite build --base=/pub/hanacapital-dt-rebuild/mobile-dev/"
   },
   "dependencies": {
     "@duetds/date-picker": "^1.4.0",
