--- a/public/netlify.toml
+++ b/public/netlify.toml
@@ -3,10 +3,11 @@
   publish = "dist/app"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NODE_OPTIONS = "--max_old_space_size=4096"
+  NODE_VERSION = "16"  
+  NODE_OPTIONS = "--max_old_space_size=3072" 
+  YARN_FLAGS = "--no-optional --network-timeout 600000"
 
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
